--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
         <div class="main-content">
         {{>header}}
         <img class="portrait" src="img/Robot.png">
+        <p>This site was created by Eitan Nargassi. It uses data from mapbox.com and darksky.net.</p>
         </div>
         {{>footer}}
     </body>
